commit for transfer

--- a/server/src/static/index.html
+++ b/server/src/static/index.html
@@ -124,8 +124,17 @@
           </div>
         </div>
 
+      </div>
+
       <div class="container_misc">
         <!-- div for other content -->
+        <div class="container_image">
+          <img src="assets/logo.png">
+        </div>
+
+        <div class="container_misc_misc">
+          PLACEHOLDER
+        </div>
       </div>
     </div>
 
