added preferences window

--- a/client/src/html/main.html
+++ b/client/src/html/main.html
@@ -11,12 +11,19 @@
     <div id="title-bar">
          <div id="title">SMPi Queueing Client</div>
          <div id="title-bar-btns">
+              <button id="settings-btn">
+                <img src="assets/gear-icon.png">
+              </button>
               <button id="close-btn">x</button>
          </div>
     </div>
-    <!-- END OF TITLE BAR -->
 
+
+    <!-- END OF TITLE BAR -->
     <div class="container_master">
+      <div class="container_status" id="status">
+          DISCONNECTED
+      </div>
       <div class="container_current">
         You are currently serving:
         <div class="container_current_number" id="current_number">
