beta release commit

--- a/client/src/html/main.html
+++ b/client/src/html/main.html
@@ -37,15 +37,8 @@
         <div class="container_config_description">
         You are currently using:
         </div>
-        <div class="container_config_dropdown">
-          <select id="dropdown">
-             <option value="001">Counter 1</option>
-             <option value="002">Counter 2</option>
-             <option value="003">Counter 3</option>
-             <option value="004">Counter 4</option>
-             <option value="005">Counter 5</option>
-             <option value="006">Counter 6</option>
-           </select>
+        <div class="container_config_counter" id="counter">
+        No counter selected.
         </div>
       </div>
     </div>
