--- a/server/src/static/index.html
+++ b/server/src/static/index.html
@@ -20,8 +20,8 @@
             </div>
           </div>
           <div class="container_customer">
-            <div class="container_customer_title">
-              NOW SERVING
+            <div class="container_customer_title" id="counter_sts_1">
+              CLOSED
             </div>
             <div class="container_customer_number" id="customer_01">
               -
@@ -39,8 +39,8 @@
             </div>
           </div>
           <div class="container_customer">
-            <div class="container_customer_title">
-              NOW SERVING
+            <div class="container_customer_title" id="counter_sts_2">
+              CLOSED
             </div>
             <div class="container_customer_number" id="customer_02">
               -
@@ -58,8 +58,8 @@
             </div>
           </div>
           <div class="container_customer">
-            <div class="container_customer_title">
-              NOW SERVING
+            <div class="container_customer_title" id="counter_sts_3">
+              CLOSED
             </div>
             <div class="container_customer_number" id="customer_03">
               -
@@ -77,8 +77,8 @@
             </div>
           </div>
           <div class="container_customer">
-            <div class="container_customer_title">
-              NOW SERVING
+            <div class="container_customer_title" id="counter_sts_4">
+              CLOSED
             </div>
             <div class="container_customer_number" id="customer_04">
               -
@@ -96,8 +96,8 @@
             </div>
           </div>
           <div class="container_customer">
-            <div class="container_customer_title">
-              NOW SERVING
+            <div class="container_customer_title" id="counter_sts_5">
+              CLOSED
             </div>
             <div class="container_customer_number" id="customer_05">
               -
@@ -115,10 +115,29 @@
             </div>
           </div>
           <div class="container_customer">
-            <div class="container_customer_title">
-              NOW SERVING
+            <div class="container_customer_title" id="counter_sts_6">
+              CLOSED
             </div>
             <div class="container_customer_number" id="customer_06">
+              -
+            </div>
+          </div>
+        </div>
+
+        <div class="container_qlist">
+          <div class="container_counter">
+            <div class="container_counter_title">
+              COUNTER
+            </div>
+            <div class="container_counter_number">
+              7
+            </div>
+          </div>
+          <div class="container_customer">
+            <div class="container_customer_title" id="counter_sts_7">
+              CLOSED
+            </div>
+            <div class="container_customer_number" id="customer_07">
               -
             </div>
           </div>
