added ecpay feature

--- a/server/src/static/index.html
+++ b/server/src/static/index.html
@@ -131,8 +131,8 @@
           <div class="container_counter_title">
             COUNTER
           </div>
-          <div class="container_counter_number">
-            7
+          <div class="container_counter_number" id="others">
+            OTHERS
           </div>
         </div>
         <div class="container_customer">
