commit for transfer

--- a/server/src/static/index.html
+++ b/server/src/static/index.html
@@ -169,8 +169,9 @@
     </div>
   </div>
 
-  <!-- placeholder for testing -->
-  <p id='placeholder_p'></p>
+  <div class="container_master_footer">
+    asd
+  </div>
 
   <!-- js script -->
   <script type="text/javascript" src="/monitor.js"></script>
