added recall function, fixed layout further

--- a/client/src/html/main.html
+++ b/client/src/html/main.html
@@ -33,6 +33,9 @@
       <div class="container_next">
         <button type="button" class="btn" id="next">NEXT CUSTOMER</button>
       </div>
+      <div class="container_next">
+        <button type="button" class="btn" id="repeat">RECALL</button>
+      </div>
       <div class="container_config">
         <div class="container_config_description">
         You are currently using:
