--- a/server/src/static/index.html
+++ b/server/src/static/index.html
@@ -180,16 +180,16 @@
         </div>
         <div class="container_image_master">
           <div class="container_image_stuff">
-            <img src="shared/default/sample-1.png" alt="">
+            <img src="shared/default/sample-1.png" id="image1" alt="">
           </div>
           <div class="container_image_stuff">
-            <img src="shared/default/sample-2.png" alt="">
+            <img src="shared/default/sample-2.png" id="image2" alt="">
           </div>
           <div class="container_image_stuff">
-            <img src="shared/default/sample-3.png" alt="">
+            <img src="shared/default/sample-3.png" id="image3" alt="">
           </div>
           <div class="container_image_stuff">
-            <img src="shared/default/sample-4.png" alt="">
+            <img src="shared/default/sample-4.png" id="image4" alt="">
           </div>
         </div>
       </div>
