--- a/server/src/static/index.html
+++ b/server/src/static/index.html
@@ -168,7 +168,7 @@
       <div class="container_misc_misc" id="miscmisc">
         <div class="container_videoPlayer">
           <div class="container_video">
-          <video id="videoPlayer" src="shared/default/SMPI.mov" autoplay autobuffer></video>
+          <video id="videoPlayer" src="shared/default/SMPI.mp4" autoplay muted autobuffer></video>
           </div>
           <div id="overlay">
             <div id="overlaytext">
